--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,8 @@
     "module": "commonjs",
     "target": "es5",
     "declaration": true,
-    "strict": true
+    "strict": true,
+    "removeComments": false
   },
   "exclude": ["node_modules", "test"]
 }
